@@ -2,6 +2,7 @@ munin (work)
 
   * Better error handling when fetching data from RRD files.
   * Fixed bug in munin-graph when choosing colours (Deb#267185).
+  * Added plugin linux/df_abs
   
 munin (1.1.3)
 
